--- a/contact-info.html
+++ b/contact-info.html
@@ -5,21 +5,19 @@
 
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0;">
-
-		
-		<link id="wsite-base-style" rel="stylesheet" type="text/css" href="http://cdn2.editmysite.com/css/sites.css?buildTime=1234" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0;">
+<link id="wsite-base-style" rel="stylesheet" type="text/css" href="http://cdn2.editmysite.com/css/sites.css?buildTime=1234" />
 <link rel="stylesheet" type="text/css" href="http://cdn2.editmysite.com/css/old/fancybox.css?1234" />
 <link rel="stylesheet" type="text/css" href="http://cdn2.editmysite.com/css/social-icons.css?buildtime=1234" media="screen,projection" />
 <link rel="stylesheet" type="text/css" href="files/main_style.css?1729469357" title="wsite-theme-css" />
 <link href='http://cdn2.editmysite.com/fonts/Maven_Pro/font.css?2' rel='stylesheet' type='text/css' />
 <link href='http://cdn2.editmysite.com/fonts/Playfair_Display/font.css?2' rel='stylesheet' type='text/css' />
-
 <link href='http://cdn2.editmysite.com/fonts/Lora/font.css?2' rel='stylesheet' type='text/css' />
 <link href='http://cdn2.editmysite.com/fonts/Montserrat/font.css?2' rel='stylesheet' type='text/css' />
 <link href='http://cdn2.editmysite.com/fonts/Montserrat/font.css?2' rel='stylesheet' type='text/css' />
 <link href='http://cdn2.editmysite.com/fonts/Josefin_Slab/font.css?2' rel='stylesheet' type='text/css' />
 <link href='http://cdn2.editmysite.com/fonts/Montserrat/font.css?2' rel='stylesheet' type='text/css' />
+<link rel="icon" href="uploads/9/2/4/0/92404808/favicon.ico"/>
 <style type='text/css'>
 .wsite-elements.wsite-not-footer:not(.wsite-header-elements) div.paragraph, .wsite-elements.wsite-not-footer:not(.wsite-header-elements) p, .wsite-elements.wsite-not-footer:not(.wsite-header-elements) .product-block .product-title, .wsite-elements.wsite-not-footer:not(.wsite-header-elements) .product-description, .wsite-elements.wsite-not-footer:not(.wsite-header-elements) .wsite-form-field label, .wsite-elements.wsite-not-footer:not(.wsite-header-elements) .wsite-form-field label, #wsite-content div.paragraph, #wsite-content p, #wsite-content .product-block .product-title, #wsite-content .product-description, #wsite-content .wsite-form-field label, #wsite-content .wsite-form-field label, .blog-sidebar div.paragraph, .blog-sidebar p, .blog-sidebar .wsite-form-field label, .blog-sidebar .wsite-form-field label {font-style:normal !important;letter-spacing: 0px !important;}
 #wsite-content div.paragraph, #wsite-content p, #wsite-content .product-block .product-title, #wsite-content .product-description, #wsite-content .wsite-form-field label, #wsite-content .wsite-form-field label, .blog-sidebar div.paragraph, .blog-sidebar p, .blog-sidebar .wsite-form-field label, .blog-sidebar .wsite-form-field label {color:#a64d47 !important;}
@@ -260,65 +258,6 @@ _W.setup_model_rpc({"rpc_namespace":"_W.CustomerAccounts.RPC","model_namespace":
 <div class="paragraph" style="display:block;"><br /><strong>Triple Decker Enterprises</strong><br />98 Kirkwood Avenue<br />Beaconsfield, Quebec<br />H9W 5L4<br />514-894-0793<br /><a href="mailto:info@tripledecker.ca">info@tripledecker.ca</a>&nbsp;<br />&nbsp;<br />&nbsp;<br />Derek Kopke &ndash; <a href="mailto:derek@tripledecker.ca">derek@tripledecker.ca</a><br /><br /><br /><font color="#000000">&nbsp;</font><br /><br /><font color="#000000">&nbsp;</font><br /><br /><br /><br /><br /></div>
 <hr style="width:100%;clear:both;visibility:hidden;"></hr>
 
-<div>
-	<form enctype="multipart/form-data" action="//www.weebly.com/weebly/apps/formSubmit.php" method="POST" id="form-485261035783060430">
-		<div id="485261035783060430-form-parent" class="wsite-form-container"
-				 style="margin-top:10px;">
-			<ul class="formlist" id="485261035783060430-form-list">
-				<h2 class="wsite-content-title"><font color="#2a2a2a">Contact Us</font><br /></h2>
-
-<label class="wsite-form-label wsite-form-fields-required-label"><span class="form-required">*</span> Indicates required field</label><div><div class="wsite-form-field wsite-name-field" style="margin:5px 0px 5px 0px;">
-				<label class="wsite-form-label">Name <span class="form-required">*</span></label>
-				<div style="clear:both;"></div>
-				<div class="wsite-form-input-container wsite-form-left wsite-form-input-first-name">
-					<input aria-required="true" id="input-951760418713369505" class="wsite-form-input wsite-input" placeholder="First" type="text" name="_u951760418713369505[first]" />
-					<label class="wsite-form-sublabel" for="input-951760418713369505">First</label>
-				</div>
-				<div class="wsite-form-input-container wsite-form-right wsite-form-input-last-name">
-					<input aria-required="true" id="input-951760418713369505-1" class="wsite-form-input wsite-input" placeholder="Last" type="text" name="_u951760418713369505[last]" />
-					<label class="wsite-form-sublabel" for="input-951760418713369505-1">Last</label>
-				</div>
-				<div id="instructions-951760418713369505" class="wsite-form-instructions" style="display:none;"></div>
-			</div>
-			<div style="clear:both;"></div></div>
-
-<div><div class="wsite-form-field" style="margin:5px 0px 5px 0px;">
-				<label class="wsite-form-label" for="input-169587598774044041">Email <span class="form-required">*</span></label>
-				<div class="wsite-form-input-container">
-					<input aria-required="true" id="input-169587598774044041" class="wsite-form-input wsite-input wsite-input-width-370px" type="text" name="_u169587598774044041" />
-				</div>
-				<div id="instructions-169587598774044041" class="wsite-form-instructions" style="display:none;"></div>
-			</div></div>
-
-<div><div class="wsite-form-field" style="margin:5px 0px 5px 0px;">
-				<label class="wsite-form-label" for="input-610167585639058124">Comment <span class="form-required">*</span></label>
-				<div class="wsite-form-input-container">
-					<textarea aria-required="true" id="input-610167585639058124" class="wsite-form-input wsite-input wsite-input-width-370px" name="_u610167585639058124" style="height: 200px"></textarea>
-				</div>
-				<div id="instructions-610167585639058124" class="wsite-form-instructions" style="display:none;"></div>
-			</div></div>
-			</ul>
-			
-		</div>
-		<div style="display:none; visibility:hidden;">
-			<input type="hidden" name="wsite_subject" />
-		</div>
-		<div style="text-align:left; margin-top:10px; margin-bottom:10px;">
-			<input type="hidden" name="form_version" value="2" />
-			<input type="hidden" name="wsite_approved" id="wsite-approved" value="approved" />
-			<input type="hidden" name="ucfid" value="485261035783060430" />
-			<input type="hidden" name="recaptcha_token"/>
-			<input type="submit" role="button" aria-label="Submit" value="Submit" style="position:absolute;top:0;left:-9999px;width:1px;height:1px" />
-			<a class="wsite-button">
-				<span class="wsite-button-inner">Submit</span>
-			</a>
-		</div>
-	</form>
-	<div id="g-recaptcha-485261035783060430" class="recaptcha" data-size="invisible" data-recaptcha="0" data-sitekey="6Ldf5h8UAAAAAJFJhN6x2OfZqBvANPQcnPa8eb1C"></div>
-
-
-
-</div>
 
 <div class="wsite-spacer" style="height:219px;"></div>
 			</div>
@@ -360,8 +299,8 @@ _W.setup_model_rpc({"rpc_namespace":"_W.CustomerAccounts.RPC","model_namespace":
 </div></div></div></div>
 		</div>
 	</div>
-	<script type="text/javascript" src="files/theme/custom.js"></script>
-	<script type="text/javascript" src="files/theme/mobile.js"></script>
+	<script type="text/javascript" src="files/custom.js"></script>
+	<script type="text/javascript" src="files/mobile.js"></script>
     <div id="customer-accounts-app"></div>
     <script src="http://cdn2.editmysite.com/js/site/main-customer-accounts-site.js?buildTime=1234"></script>
 
